--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,14 +39,21 @@ const sortedPosts = getSortedPosts(posts);
       <p>
         I'm a Software Engineer in Infrastructure at Clever.
 
-        <br/>
-        <br/>
-        
-        Read posts or see the <LinkButton
-          className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="https://github.com/satnaing/astro-paper#readme"
-          >documentation</LinkButton
-        > for more info.
+        <br />
+        <br />
+
+        Check out what I'm doing <LinkButton
+          className="hover:text-skin-accent underline underline-offset-4"
+          href="/now">/now</LinkButton
+        >
+
+        <br />
+        <br />
+
+        View my <LinkButton
+          className="hover:text-skin-accent underline underline-offset-4"
+          href="/resume.pdf">/resume</LinkButton
+        > for some of my professional work.
       </p>
       <div class="social-wrapper">
         <Socials />
