--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -12,12 +12,12 @@
     --color-border: 236, 233, 233;
   }
   .theme-dark {
-    --color-fill: 47, 55, 65;
+    --color-fill: 25, 25, 25;
     --color-text-base: 230, 230, 230;
-    --color-accent: 26, 217, 217;
+    --color-accent: 102, 255, 102;
     --color-card: 63, 75, 90;
     --color-card-muted: 89, 107, 129;
-    --color-border: 59, 70, 85;
+    --color-border: 60, 60, 60;
   }
   #sun-svg,
   .theme-dark #moon-svg {
@@ -30,7 +30,7 @@
   body {
     @apply font-serif bg-skin-fill text-skin-base min-h-screen flex flex-col 
     selection:bg-skin-accent selection:text-skin-inverted selection:bg-opacity-70;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
   }
   section,
   footer {
@@ -48,8 +48,8 @@
     group-hover:fill-transparent;
   }
   .prose {
-    @apply prose-a:underline-offset-8 prose-ul:overflow-x-clip 
-    prose-a:!decoration-dashed hover:prose-a:text-skin-accent 
+    @apply prose-a:underline-offset-4 prose-ul:overflow-x-clip 
+    hover:prose-a:text-skin-accent 
     prose-img:mx-auto prose-img:border-2 prose-img:border-skin-line
     prose-img:!mt-2 prose-headings:!mb-3
     prose-th:border prose-th:border-skin-line
@@ -67,6 +67,7 @@
     prose-pre:!text-skin-base prose-a:!text-skin-base 
     prose-hr:!border-skin-line prose-li:marker:!text-skin-accent 
     prose-blockquote:!border-l-skin-accent prose-blockquote:border-opacity-50;
+    font-size: 1.5rem;
   }
   .prose a {
     @apply hover:!text-skin-accent;
