--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ const sortedPosts = getSortedPosts(posts);
 
         Check out what I'm doing <LinkButton
           className="hover:text-skin-accent underline underline-offset-4"
-          href="/now">/now</LinkButton
+          href="/now">now</LinkButton
         >
 
         <br />
@@ -52,7 +52,7 @@ const sortedPosts = getSortedPosts(posts);
 
         View my <LinkButton
           className="hover:text-skin-accent underline underline-offset-4"
-          href="/resume.pdf">/resume</LinkButton
+          href="/resume.pdf">resume</LinkButton
         > for some of my professional work.
       </p>
       <div class="social-wrapper">
