--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -21,6 +21,7 @@ const { href, className, ariaLabel, title, tabindex, rel, target, ...props } =
   title={title}
   rel={rel}
   target={target}
+  data-goatcounter-click={title}
 >
   <slot />
 </a>
