--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,8 +17,14 @@ const {
 } = Astro.props;
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+console.log(Astro.url.pathname);
+let imagePath =
+  Astro.url.pathname.length === 1
+    ? "og-image"
+    : Astro.url.pathname.slice(1, -1).replaceAll("/", "--");
+console.log(imagePath);
 const socialImageURL = new URL(
-  ogImage ? ogImage : SITE.ogImage,
+  `/assets/ogs/${imagePath}.png`,
   Astro.url.origin
 );
 ---
@@ -66,6 +72,12 @@ const socialImageURL = new URL(
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
     />
+
+    <script
+      data-goatcounter="https://jakegut.goatcounter.com/count"
+      async
+      src="//gc.zgo.at/count.js"
+    ></script>
 
     <script is:inline>
       const primaryColorScheme = "none"; // "light" | "dark" | "none"
