--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -38,6 +38,9 @@ const path = Astro.url.pathname.length == 1 ? "" : Astro.url.pathname;
         <li>
           <a href="/now" class={activeNav === "now" ? "active" : ""}>/now</a>
         </li>
+        <li>
+          <a href="https://notes.jakegut.com" target="_blank">notes.</a>
+        </li>
       </ul>
       <div class="button-wrapper">
         <LinkButton
