--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,31 +63,18 @@ const sortedPosts = getSortedPosts(posts);
     <Hr />
 
     <section id="recent-posts">
-      <h2>Recent Posts</h2>
+      <h2>Posts</h2>
       <ul>
         {
-          sortedPosts.map(
-            ({ frontmatter }, index) =>
-              index < 4 && (
-                <Card
-                  href={`/posts/${slugify(frontmatter)}`}
-                  post={frontmatter}
-                  secHeading={false}
-                />
-              )
-          )
+          sortedPosts.map(({ frontmatter }) => (
+            <Card
+              href={`/posts/${slugify(frontmatter)}`}
+              post={frontmatter}
+              secHeading={false}
+            />
+          ))
         }
       </ul>
-      <div class="all-posts-btn-wrapper">
-        <LinkButton href="/posts">
-          All Posts
-          <svg xmlns="http://www.w3.org/2000/svg"
-            ><path
-              d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z"
-            ></path>
-          </svg>
-        </LinkButton>
-      </div>
     </section>
   </main>
 
