--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import { SITE } from "src/config";
 import "../styles/base.css";
+import "../styles/iosevka-aile.css";
 
 export interface Props {
   title?: string;
@@ -65,11 +66,53 @@ const socialImageURL = new URL(
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
     />
+
     <link
       rel="preload"
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&display=swap"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
+      href="/ttf/iosevka-aile-regular.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin
+    />
+
+    <link
+      rel="preload"
+      href="/ttf/iosevka-aile-medium.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin
+    />
+
+    <link
+      rel="preload"
+      href="/ttf/iosevka-aile-italic.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin
+    />
+
+    <link
+      rel="preload"
+      href="/ttf/iosevka-aile-bold.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin
+    />
+
+    <link
+      rel="preload"
+      href="/ttf/iosevka-aile-semibold.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin
+    />
+
+    <link
+      rel="preload"
+      href="/ttf/iosevka-aile-mediumitalic.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin
     />
 
     <script
