subset, compress fonts

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -69,49 +69,49 @@ const socialImageURL = new URL(
 
     <link
       rel="preload"
-      href="/ttf/iosevka-aile-regular.ttf"
+      href="/woff2/iosevka-aile-regular-subset.woff2"
       as="font"
-      type="font/ttf"
+      type="font/woff2"
       crossorigin
     />
 
     <link
       rel="preload"
-      href="/ttf/iosevka-aile-medium.ttf"
+      href="/woff2/iosevka-aile-medium-subset.woff2"
       as="font"
-      type="font/ttf"
+      type="font/woff2"
       crossorigin
     />
 
     <link
       rel="preload"
-      href="/ttf/iosevka-aile-italic.ttf"
+      href="/woff2/iosevka-aile-italic-subset.woff2"
       as="font"
-      type="font/ttf"
+      type="font/woff2"
       crossorigin
     />
 
     <link
       rel="preload"
-      href="/ttf/iosevka-aile-bold.ttf"
+      href="/woff2/iosevka-aile-bold-subset.woff2"
       as="font"
-      type="font/ttf"
+      type="font/woff2"
       crossorigin
     />
 
     <link
       rel="preload"
-      href="/ttf/iosevka-aile-semibold.ttf"
+      href="/woff2/iosevka-aile-semibold-subset.woff2"
       as="font"
-      type="font/ttf"
+      type="font/woff2"
       crossorigin
     />
 
     <link
       rel="preload"
-      href="/ttf/iosevka-aile-mediumitalic.ttf"
+      href="/woff2/iosevka-aile-mediumitalic-subset.woff2"
       as="font"
-      type="font/ttf"
+      type="font/woff2"
       crossorigin
     />
 
