--- a/src/styles/iosevka-aile.css
+++ b/src/styles/iosevka-aile.css
@@ -4,8 +4,8 @@
   font-weight: 100;
   font-stretch: normal;
   font-style: normal;
-  src: url("/ttf/iosevka-aile-thin.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-thin.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-thin-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-thin-subset.woff") format("woff");
 }
 
 @font-face {
@@ -14,8 +14,8 @@
   font-weight: 100;
   font-stretch: normal;
   font-style: oblique;
-  src: url("/ttf/iosevka-aile-thinoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-thinoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-thinoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-thinoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -23,8 +23,8 @@
   font-display: swap;
   font-weight: 100;
   font-stretch: normal;
-  src: url("/ttf/iosevka-aile-thinoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-thinoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-thinoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-thinoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -33,8 +33,8 @@
   font-weight: 100;
   font-stretch: normal;
   font-style: italic;
-  src: url("/ttf/iosevka-aile-thinitalic.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-thinitalic.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-thinitalic-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-thinitalic-subset.woff") format("woff");
 }
 
 @font-face {
@@ -43,8 +43,8 @@
   font-weight: 200;
   font-stretch: normal;
   font-style: normal;
-  src: url("/ttf/iosevka-aile-extralight.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-extralight.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-extralight-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-extralight-subset.woff") format("woff");
 }
 
 @font-face {
@@ -53,8 +53,8 @@
   font-weight: 200;
   font-stretch: normal;
   font-style: oblique;
-  src: url("/ttf/iosevka-aile-extralightoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-extralightoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-extralightoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-extralightoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -62,8 +62,8 @@
   font-display: swap;
   font-weight: 200;
   font-stretch: normal;
-  src: url("/ttf/iosevka-aile-extralightoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-extralightoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-extralightoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-extralightoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -72,8 +72,8 @@
   font-weight: 200;
   font-stretch: normal;
   font-style: italic;
-  src: url("/ttf/iosevka-aile-extralightitalic.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-extralightitalic.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-extralightitalic-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-extralightitalic-subset.woff") format("woff");
 }
 
 @font-face {
@@ -82,8 +82,8 @@
   font-weight: 300;
   font-stretch: normal;
   font-style: normal;
-  src: url("/ttf/iosevka-aile-light.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-light.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-light-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-light-subset.woff") format("woff");
 }
 
 @font-face {
@@ -92,8 +92,8 @@
   font-weight: 300;
   font-stretch: normal;
   font-style: oblique;
-  src: url("/ttf/iosevka-aile-lightoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-lightoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-lightoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-lightoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -101,8 +101,8 @@
   font-display: swap;
   font-weight: 300;
   font-stretch: normal;
-  src: url("/ttf/iosevka-aile-lightoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-lightoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-lightoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-lightoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -111,8 +111,8 @@
   font-weight: 300;
   font-stretch: normal;
   font-style: italic;
-  src: url("/ttf/iosevka-aile-lightitalic.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-lightitalic.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-lightitalic-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-lightitalic-subset.woff") format("woff");
 }
 
 @font-face {
@@ -121,8 +121,8 @@
   font-weight: 400;
   font-stretch: normal;
   font-style: normal;
-  src: url("/ttf/iosevka-aile-regular.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-regular.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-regular-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-regular-subset.woff") format("woff");
 }
 
 @font-face {
@@ -131,8 +131,8 @@
   font-weight: 400;
   font-stretch: normal;
   font-style: oblique;
-  src: url("/ttf/iosevka-aile-oblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-oblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-oblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-oblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -140,8 +140,8 @@
   font-display: swap;
   font-weight: 400;
   font-stretch: normal;
-  src: url("/ttf/iosevka-aile-oblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-oblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-oblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-oblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -150,8 +150,8 @@
   font-weight: 400;
   font-stretch: normal;
   font-style: italic;
-  src: url("/ttf/iosevka-aile-italic.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-italic.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-italic-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-italic-subset.woff") format("woff");
 }
 
 @font-face {
@@ -160,8 +160,8 @@
   font-weight: 500;
   font-stretch: normal;
   font-style: normal;
-  src: url("/ttf/iosevka-aile-medium.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-medium.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-medium-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-medium-subset.woff") format("woff");
 }
 
 @font-face {
@@ -170,8 +170,8 @@
   font-weight: 500;
   font-stretch: normal;
   font-style: oblique;
-  src: url("/ttf/iosevka-aile-mediumoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-mediumoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-mediumoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-mediumoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -179,8 +179,8 @@
   font-display: swap;
   font-weight: 500;
   font-stretch: normal;
-  src: url("/ttf/iosevka-aile-mediumoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-mediumoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-mediumoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-mediumoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -189,8 +189,8 @@
   font-weight: 500;
   font-stretch: normal;
   font-style: italic;
-  src: url("/ttf/iosevka-aile-mediumitalic.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-mediumitalic.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-mediumitalic-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-mediumitalic-subset.woff") format("woff");
 }
 
 @font-face {
@@ -199,8 +199,8 @@
   font-weight: 600;
   font-stretch: normal;
   font-style: normal;
-  src: url("/ttf/iosevka-aile-semibold.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-semibold.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-semibold-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-semibold-subset.woff") format("woff");
 }
 
 @font-face {
@@ -209,8 +209,8 @@
   font-weight: 600;
   font-stretch: normal;
   font-style: oblique;
-  src: url("/ttf/iosevka-aile-semiboldoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-semiboldoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-semiboldoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-semiboldoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -218,8 +218,8 @@
   font-display: swap;
   font-weight: 600;
   font-stretch: normal;
-  src: url("/ttf/iosevka-aile-semiboldoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-semiboldoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-semiboldoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-semiboldoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -228,8 +228,8 @@
   font-weight: 600;
   font-stretch: normal;
   font-style: italic;
-  src: url("/ttf/iosevka-aile-semibolditalic.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-semibolditalic.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-semibolditalic-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-semibolditalic-subset.woff") format("woff");
 }
 
 @font-face {
@@ -238,8 +238,8 @@
   font-weight: 700;
   font-stretch: normal;
   font-style: normal;
-  src: url("/ttf/iosevka-aile-bold.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-bold.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-bold-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-bold-subset.woff") format("woff");
 }
 
 @font-face {
@@ -248,8 +248,8 @@
   font-weight: 700;
   font-stretch: normal;
   font-style: oblique;
-  src: url("/ttf/iosevka-aile-boldoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-boldoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-boldoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-boldoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -257,8 +257,8 @@
   font-display: swap;
   font-weight: 700;
   font-stretch: normal;
-  src: url("/ttf/iosevka-aile-boldoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-boldoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-boldoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-boldoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -267,8 +267,8 @@
   font-weight: 700;
   font-stretch: normal;
   font-style: italic;
-  src: url("/ttf/iosevka-aile-bolditalic.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-bolditalic.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-bolditalic-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-bolditalic-subset.woff") format("woff");
 }
 
 @font-face {
@@ -277,8 +277,8 @@
   font-weight: 800;
   font-stretch: normal;
   font-style: normal;
-  src: url("/ttf/iosevka-aile-extrabold.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-extrabold.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-extrabold-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-extrabold-subset.woff") format("woff");
 }
 
 @font-face {
@@ -287,8 +287,8 @@
   font-weight: 800;
   font-stretch: normal;
   font-style: oblique;
-  src: url("/ttf/iosevka-aile-extraboldoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-extraboldoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-extraboldoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-extraboldoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -296,8 +296,8 @@
   font-display: swap;
   font-weight: 800;
   font-stretch: normal;
-  src: url("/ttf/iosevka-aile-extraboldoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-extraboldoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-extraboldoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-extraboldoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -306,8 +306,8 @@
   font-weight: 800;
   font-stretch: normal;
   font-style: italic;
-  src: url("/ttf/iosevka-aile-extrabolditalic.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-extrabolditalic.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-extrabolditalic-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-extrabolditalic-subset.woff") format("woff");
 }
 
 @font-face {
@@ -316,8 +316,8 @@
   font-weight: 900;
   font-stretch: normal;
   font-style: normal;
-  src: url("/ttf/iosevka-aile-heavy.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-heavy.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-heavy-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-heavy-subset.woff") format("woff");
 }
 
 @font-face {
@@ -326,8 +326,8 @@
   font-weight: 900;
   font-stretch: normal;
   font-style: oblique;
-  src: url("/ttf/iosevka-aile-heavyoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-heavyoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-heavyoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-heavyoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -335,8 +335,8 @@
   font-display: swap;
   font-weight: 900;
   font-stretch: normal;
-  src: url("/ttf/iosevka-aile-heavyoblique.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-heavyoblique.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-heavyoblique-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-heavyoblique-subset.woff") format("woff");
 }
 
 @font-face {
@@ -345,6 +345,6 @@
   font-weight: 900;
   font-stretch: normal;
   font-style: italic;
-  src: url("/ttf/iosevka-aile-heavyitalic.ttf") format("truetype"),
-    url("/woff2/iosevka-aile-heavyitalic.woff2") format("woff2");
+  src: url("/woff2/iosevka-aile-heavyitalic-subset.woff2") format("woff2"),
+    url("/woff2/iosevka-aile-heavyitalic-subset-subset.woff") format("woff");
 }
