--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,16 +44,21 @@ const sortedPosts = getSortedPosts(posts);
 
         Check out what I'm doing <LinkButton
           className="hover:text-skin-accent underline underline-offset-4"
-          href="/now">now</LinkButton
-        >
+          href="/now">now</LinkButton>.
+
+        <br />
+        <br />
+
+        <LinkButton
+        className="hover:text-skin-accent underline underline-offset-4"
+          href="/contact">Schedule a time</LinkButton> to talk with me.
 
         <br />
         <br />
 
         View my <LinkButton
           className="hover:text-skin-accent underline underline-offset-4"
-          href="/resume.pdf">resume</LinkButton
-        > for some of my professional work.
+          href="/resume.pdf">resume</LinkButton> for some of my professional work.
       </p>
       <div class="social-wrapper">
         <Socials />
