remove weird spacing after links

--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -22,9 +22,7 @@ const { href, className, ariaLabel, title, tabindex, rel, target, ...props } =
   rel={rel}
   target={target}
   data-goatcounter-click={title}
->
-  <slot />
-</a>
+><slot /></a>
 
 <style>
   a {
