--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ const path = Astro.url.pathname.length == 1 ? "" : Astro.url.pathname;
   <div class="nav-container">
     <div class="top-nav-wrap">
       <a href="/" class="logo">
-        user@jakegut<span class="dir">:~{path}$</span><span class="underscore"
+        user@harish<span class="dir">:~{path}$</span><span class="underscore"
           >_</span
         >
       </a>
