--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const sortedPosts = getSortedPosts(posts);
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Hi, I'm Jake</h1>
+      <h1>Hi, I'm Harish</h1>
       <a
         target="_blank"
         href="/rss.xml"
@@ -37,7 +37,7 @@ const sortedPosts = getSortedPosts(posts);
       </a>
 
       <p>
-        I'm a Software Engineer in Infrastructure at Clever.
+        I'm a Software Engineer in Backend at Hexon Global.
 
         <br />
         <br />
