--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import getSortedPosts from "@utils/getSortedPosts";
 import slugify from "@utils/slugify";
 import type { Frontmatter } from "src/types";
 import Socials from "@components/Socials.astro";
-
+import { Analytics } from '@vercel/analytics/react';
 const posts = await Astro.glob<Frontmatter>("../contents/**/*.md");
 
 const sortedPosts = getSortedPosts(posts);
@@ -84,6 +84,7 @@ const sortedPosts = getSortedPosts(posts);
   </main>
 
   <Footer />
+  <Analytics/>
 </Layout>
 
 <style>
